v0.13
	* ADD : Shortcut editor
	* FIX : crash after undo roundabout (closes #1218)
	* ADD : enhanced Goto dialog
	* ADD : add "Area" label option to the style editor (handle road label as trackpoints, with anchor at the center of the bounding box)
	* ADD : add support for MTK-based GPSes
	* ADD : add "Halo" label option to the style editor
	* ADD : make focus and hover size configurable
	* FIX : Windows crash when resaving changed scene truncates save file (closes #1164)
	* ADD : Move to the next field on enter in properties dock tags - part 2 (by Travers Carter) (closes #1137)
v0.12
	* FIX : full zoom drawing bug yahoo images don't scale (fixes #1173)
	* FIX : scroll redraw bug yahoo images don't redraw (fixes #1172)
	* FIX : scroll redraw bug streetnames left behind (fixes #1171)
	* FIX : limit max zoom to a scale of ~2m to avoid overflow
	* ADD : SlippyMap remembers last used view
	* FIX : remove support for internal webkit. As of now, Qt 4.4+ is required for Yahoo! imagery.
	* ADD : let the use choose between translating standard OSM tags
	* ADD : ability to set language explicitly
	* FIX : make "About" dialog more useful
	* FIX : show correct progress when downloading maps
	* FIX : make yahoo maps line up for large views (sync from r10585 by Petr Dlouhy)
	* FIX : GPX track timestamps are in UTC (see gpx 1.1 schema)
	* FIX : change serial port GPS readout from busy looping to signal wakeup
	* FIX : make the heading appear in the satellite tracker
	* ADD : nice satellite strength view widget
	* FIX : OSM export doesn't handle quotes well (Fixes #1139)
	* ADD : Allow osm API url in the "Use OSM link" text box
	* FIX : 'Download more' should work without prior 'Download from web' (Closes #1028)
	* FIX : Joining roads by moving a node from one road on top of another road gives incorrect node sequence (Fixes #1149)
	* ADD : preliminary gpsd supprt
	* FIX : Upload of a modified single GPX track node was not working anymore (fixes #1141)